[package]
name = "equeue"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

[dependencies]
either = "1.6.1"
cfg-if = "1.0.0"

# optional integrations
async-io = {version="1.6.0", optional=true}
async-std = {version="1.10.0", optional=true}
tokio = {version="1.15.0", optional=true, features=["time", "sync", "rt-multi-thread"]}

[dev-dependencies]
rand = "0.8.4"
structopt = "0.3.25"
