[package]
name = "equeue"
version = "0.1.0"
edition = "2021"

autobenches = false

[lib]
bench = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true

[profile.debug_]
inherits = "dev"
opt-level = 0

[profile.small]
inherits = "dev"
opt-level = "z"
debug-assertions = false
lto = true
panic = "abort"

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

# integer type requirements
#
# note you only need to choose one for each type,
# feature resolution will choose the largest type
# that satisfies all requirements
utick-at-least-u128 = []
utick-at-least-u64 = []
utick-at-least-u32 = []
utick-at-least-u16 = []
utick-at-least-u8 = []

udeptr-at-least-u128 = []
udeptr-at-least-u64 = []
udeptr-at-least-u32 = []

examples = ["std", "rand", "structopt"]
emu = []
measure-locks = ["emu"]

[dependencies]
either = {version="1.6.1", default-features=false}
cfg-if = "1.0.0"

# optional integrations
embedded-time = {version="0.12.1", optional=true}

async-io = {version="1.6.0", optional=true}
async-std = {version="1.10.0", optional=true}
tokio = {version="1.15.0", optional=true, features=["time", "rt-multi-thread"]}

# tools for testing/benchmarking, these are here since dev-dependencies don't
# support optional dependencies
loom = {version="0.5.4", optional=true}
criterion = {version="0.3.5", features=["html_reports"], optional=true}

# example dependencies, these are here since dev-dependenices don't support
# optional dependencies
rand = {version="0.8.4", optional=true}
structopt = {version="0.3.25", optional=true}

[build-dependencies]
cfg-if = "1.0.0"

# test targets
[[test]]
name = "loom"
required-features = ["loom"]

# bench targets
[[bench]]
name = "throughput"
required-features = ["criterion"]
harness = false

[[bench]]
name = "ops"
required-features = ["criterion", "emu"]
harness = false

[[bench]]
name = "locks"
required-features = ["criterion", "emu", "measure-locks"]
harness = false

# cargo bloat doesn't support benches, so we need to pretend this is an example
[[example]]
name = "code_size"
path = "benches/code_size.rs"
harness = false

